test: add jest condif with ts

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -26,7 +26,7 @@
               "--runTestsByPath",
               "${relativeFile}",
               "--config",
-              "jest.config.js"
+              "jest.config.ts"
             ],
             "console": "integratedTerminal",
             "internalConsoleOptions": "neverOpen",
